buffer overflow. It no longer assumes a binary zero at the end of a too-small 
regerror() buffer.

17. Fixed typo ("&&" for "&") in pcre2_study(). Fortunately, this could not 
actually affect anything, by sheer luck.

18. Two minor fixes for MSVC compilation: (a) removal of apparently incorrect 
"const" qualifiers in pcre2test and (b) defining snprintf as _snprintf for 
older MSVC compilers.

19. Applied Chris Wilson's patch (Bugzilla #1681) to CMakeLists.txt for MSVC 
static compilation.

20. Updated pcre2grep to set stdout as binary when run under Windows, so as not
to convert \r\n at the ends of reflected lines into \r\r\n. This required 
ensuring that other output that is written to stdout (e.g. file names) uses the 
appropriate line terminator: \r\n for Windows, \n otherwise.

21. When a line is too long for pcre2grep's internal buffer, show the maximum 
length in the error message.

22. Added support for string callouts to pcre2grep (Zoltan's patch with PH 
additions).

23. RunTest.bat was missing a "set type" line for test 22.

24. The pcre2posix.c file was including pcre2_internal.h, and using some 
"private" knowledge of the data structures. This is unnecessary; the code has 
been re-factored and no longer includes pcre2_internal.h.

25. A racing condition is fixed in JIT reported by Mozilla.

26. Minor code refactor to avoid "array subscript is below array bounds" 
compiler warning.

27. Minor code refactor to avoid "left shift of negative number" warning. 

28. Add a bit more sanity checking to pcre2_serialize_decode() and document 
that it expects trusted data.

29. Fix typo in pcre2_jit_test.c

30. Due to an oversight, pcre2grep was not making use of JIT when available. 
This is now fixed.

31. The RunGrepTest script is updated to use the valgrind suppressions file
when testing with JIT under valgrind (compare 10.21/51 below). The suppressions 
file is updated so that is now the same as for PCRE1: it suppresses the